# serializer version: 1
# name: TestCausalOrderingOutputs.test_rf_regressor_copula_causal_asymmetric_confounding
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.12621 |   -0.0648  |   -0.08791 |     0.00583 |     -0.02043 |   -0.05832 |   -0.1291  |    -0.03685 |
      |  2 |            2 | 2.20594 | -0.63266 |   -0.05318 |   -0.33227 |    -0.00699 |     -0.02532 |   -0.0258  |   -0.12588 |    -0.02701 |
      |  3 |            3 | 2.20594 | -0.28635 |    0.47303 |    0.24599 |    -0.0306  |      0.05199 |    1.31985 |    0.05576 |     0.11749 |
      |  4 |            4 | 2.20594 |  0.6729  |   -0.18129 |    0.01935 |     0.03102 |      0.00474 |   -0.15529 |    0.06153 |     0.02435 |
      |  5 |            5 | 2.20594 |  0.10564 |   -0.10443 |   -0.01268 |     0.03028 |      0.05352 |    0.06817 |   -0.01368 |     0.00844 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00057 |    0.00238 |    0.00249 |     0.0018  |      0.00508 |    0.00205 |    0.00238 |     0.00514 |
      |  2 |            2 |      0 |  0.00037 |    0.00172 |    0.00162 |     0.00285 |      0.00322 |    0.00247 |    0.00343 |     0.00332 |
      |  3 |            3 |      0 |  0.00291 |    0.01391 |    0.0128  |     0.01145 |      0.01834 |    0.01645 |    0.0112  |     0.01364 |
      |  4 |            4 |      0 |  0.00046 |    0.00223 |    0.00201 |     0.00105 |      0.0024  |    0.00127 |    0.00139 |     0.00195 |
      |  5 |            5 |      0 |  0.00119 |    0.00534 |    0.00524 |     0.00206 |      0.00416 |    0.00324 |    0.00195 |     0.00367 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_ctree_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.94829 |    0.05168 |   -0.28792 |    -0.08663 |     -0.03466 |   -0.1954  |   -0.36025 |     0.34368 |
      |  2 |            2 | 2.20594 | -0.36694 |   -0.00624 |   -0.50371 |     0.02088 |     -0.00313 |   -0.04426 |   -0.11283 |    -0.21286 |
      |  3 |            3 | 2.20594 |  0.39331 |    0.65834 |   -0.00301 |    -0.00695 |     -0.06168 |    0.82555 |   -0.00429 |     0.1459  |
      |  4 |            4 | 2.20594 |  0.18777 |   -0.12008 |    0.25477 |     0.01512 |     -0.07788 |   -0.19346 |    0.08324 |     0.32784 |
      |  5 |            5 | 2.20594 |  0.33986 |    0.02665 |   -0.22704 |     0.0064  |      0.008   |    0.13787 |   -0.41635 |     0.25988 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05715 |    0.05647 |    0.05785 |     0.0812  |      0.04819 |    0.09542 |    0.11066 |     0.07565 |
      |  2 |            2 |      0 |  0.05203 |    0.06166 |    0.06198 |     0.05198 |      0.04713 |    0.04756 |    0.14709 |     0.06878 |
      |  3 |            3 |      0 |  0.05244 |    0.06661 |    0.04537 |     0.0661  |      0.05203 |    0.04925 |    0.10111 |     0.06351 |
      |  4 |            4 |      0 |  0.03822 |    0.05186 |    0.05038 |     0.06418 |      0.04849 |    0.04309 |    0.12398 |     0.08369 |
      |  5 |            5 |      0 |  0.04357 |    0.04107 |    0.05945 |     0.05662 |      0.03377 |    0.04664 |    0.05584 |     0.0496  |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_asymmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.21247 |   -0.06369 |   -0.06757 |    -0.00385 |     -0.04543 |   -0.04782 |   -0.04686 |    -0.0301  |
      |  2 |            2 | 2.20594 | -0.73052 |   -0.05998 |   -0.29419 |     0.0139  |     -0.05219 |   -0.03311 |   -0.02998 |    -0.04304 |
      |  3 |            3 | 2.20594 | -0.30615 |    0.54757 |    0.2573  |     0.05585 |      0.06395 |    1.13325 |    0.07348 |     0.12191 |
      |  4 |            4 | 2.20594 |  0.72176 |   -0.21399 |   -0.00548 |     0.04123 |      0.01    |   -0.15677 |    0.01679 |     0.06378 |
      |  5 |            5 | 2.20594 |  0.11276 |   -0.07062 |   -0.02287 |     0.00204 |      0.06846 |    0.0067  |    0.01147 |     0.02733 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00046 |    0.00204 |    0.002   |     0.00346 |      0.00657 |    0.00365 |    0.00443 |     0.00733 |
      |  2 |            2 |      0 |  0.00108 |    0.00482 |    0.00473 |     0.00651 |      0.01171 |    0.00618 |    0.00915 |     0.01252 |
      |  3 |            3 |      0 |  0.00232 |    0.01094 |    0.0102  |     0.00997 |      0.01949 |    0.01202 |    0.01138 |     0.02229 |
      |  4 |            4 |      0 |  0.0012  |    0.00567 |    0.00526 |     0.00449 |      0.00738 |    0.00627 |    0.00382 |     0.0097  |
      |  5 |            5 |      0 |  0.00051 |    0.00257 |    0.00223 |     0.00631 |      0.00556 |    0.00699 |    0.00554 |     0.00806 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.83335 |   -0.00682 |   -0.36054 |     0.00445 |     -0.09792 |   -0.07687 |   -0.07615 |    -0.07058 |
      |  2 |            2 | 2.20594 | -0.81859 |   -0.01905 |   -0.24765 |    -0.07804 |     -0.05341 |   -0.00965 |    0.01453 |    -0.01724 |
      |  3 |            3 | 2.20594 |  0.47854 |    0.5936  |   -0.14883 |    -0.00354 |      0.03338 |    0.84695 |    0.01117 |     0.1359  |
      |  4 |            4 | 2.20594 |  0.27408 |   -0.04085 |    0.17806 |     0.08542 |      0.01966 |   -0.17922 |    0.08376 |     0.05641 |
      |  5 |            5 | 2.20594 | -0.3357  |   -0.06143 |    0.05725 |     0.1164  |      0.14853 |    0.03071 |    0.07169 |     0.10781 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02772 |    0.03481 |    0.05573 |     0.05157 |      0.06122 |    0.02014 |    0.06033 |     0.05792 |
      |  2 |            2 |      0 |  0.02176 |    0.02329 |    0.02903 |     0.03922 |      0.04003 |    0.0167  |    0.02976 |     0.03464 |
      |  3 |            3 |      0 |  0.02713 |    0.02827 |    0.03724 |     0.03168 |      0.03904 |    0.02043 |    0.04009 |     0.03115 |
      |  4 |            4 |      0 |  0.01288 |    0.02379 |    0.01708 |     0.00955 |      0.02071 |    0.00913 |    0.01607 |     0.01284 |
      |  5 |            5 |      0 |  0.0219  |    0.02482 |    0.04116 |     0.04056 |      0.03173 |    0.01874 |    0.05156 |     0.04125 |
    ''',
  })
# ---
